--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
+  /* == ASSIGNMENT == */
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +19,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  /* == ASSIGNMENT == */
+  display: flex;
+  gap: 16px;
+  padding: 0;
 }
 
 a {
@@ -23,3 +32,9 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+/*
+  >> NOTE <<
+  Solution sets ul margin property to 0. This does not make a difference in
+  chrome. Probably better to be safe than sorry.
+*/
