--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,21 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+/* == ASSIGNMENT == */
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.images-container {
+  display: flex;
+  gap: 52px;
+}
+
+.item {
+  width: 200px;
+  text-align: center;
+}
