--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -1,94 +1,115 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 html,
 body {
+  /* ::box-model:: */
   height: 100%;
 }
 
 body {
+  /* ::typography:: */
   font-family: Roboto, sans-serif;
-  margin: 0;
+
+  /* ::box-model:: */
   background: #aaa;
   color: #333;
-  /* I'll give you this one for free lol */
+  margin: 0;
+
+  /* ::layout:: */
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .modal {
+  /* ::box-model:: */
   background: white;
-  width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0, 0, 0, .2);
-  /* == ASSIGNMENT == */
-  display: flex;
-  padding: 16px;
-  gap: 16px;
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.2);
+  padding: 16px; /* <= ASSIGNMENT =| */
+  width: 480px;
+
+  /* ::layout:: */
+  display: flex; /* <= ASSIGNMENT =| */
+  gap: 16px; /* <= ASSIGNMENT =| */
 }
 
 /* == ASSIGNMENT == */
 .main {
+  /* ::layout:: */
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
 
 .top-line {
+  /* ::layout:: */
   display: flex;
   justify-content: space-between;
 }
 
 .header {
+  /* ::typography:: */
   font-weight: bold;
   font-size: 1.3rem;
 }
-
 /* == END ASSIGNMENT == */
 
 .icon {
-  color: royalblue;
+  /* ::typography:: */
   font-size: 26px;
   font-weight: 700;
+
+  /* ::box-model:: */
   background: lavender;
-  width: 42px;
-  height: 42px;
   border-radius: 50%;
+  color: royalblue;
+  height: 42px;
+  width: 42px;
+
+  /* ::layout:: */
   display: flex;
   align-items: center;
+  flex-shrink: 0; /* <= ASSIGNMENT =| */
   justify-content: center;
-  /* == ASSIGNMENT == */
-  flex-shrink: 0;
 }
 
 .close-button {
+  /* ::typography:: */
+  font-size: 16px;
+  font-weight: 400;
+
+  /* ::box-model:: */
   background: #eee;
   border-radius: 50%;
-  color: #888;
-  font-weight: 400;
-  font-size: 16px;
-  height: 24px;
-  width: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border: 1px solid #eee;
+  color: #888;
+  height: 24px;
   padding: 0;
+  width: 24px;
+
+  /* ::layout:: */
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 button {
+  /* ::box-model:: */
+  border-radius: 8px;
   cursor: pointer;
   padding: 8px 16px;
-  border-radius: 8px;
 }
 
 button.continue {
+  /* ::box-model:: */
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
 }
 
 button.cancel {
+  /* ::box-model:: */
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
