--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -1,26 +1,33 @@
 .container {
+  /* ::box-model:: */
   background: dodgerblue;
   border: 4px solid midnightblue;
-  width: 400px;
   height: 300px;
-  /* == ASSIGNMENT ==*/
-  display: flex;
-  justify-content: center;
-  /* align-items: center; */
+  width: 400px;
+
+  /* ::layout:: */
+  display: flex; /* <= ASSIGNMENT =| */
+  /* align-items: center; */ /* <= ASSIGNMENT =| */
+  justify-content: center; /* <= ASSIGNMENT =| */
 }
 
 .box {
-  background: palevioletred;
+  /* ::typography:: */
   font-weight: bold;
   text-align: center;
+
+  /* ::box-model:: */
+  background: palevioletred;
   border: 6px solid maroon;
-  width: 80px;
   height: 80px;
-  /* == ASSIGNMENT ==*/
-  align-self: center;
+  width: 80px;
+
+  /* ::layout:: */
+  align-self: center; /* <= ASSIGNMENT =| */
 }
 
 /*
+  >> NOTE <<
   Can either use `align-items: center;` on flex container or
   `align-self: center;` on flex item to center vertically. Both doesn't hurt but
   is not needed.
