--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,36 +1,48 @@
 .header {
+  /* ::typography:: */
   font-family: monospace;
+
+  /* ::box-model:: */
   background: papayawhip;
-  /* == ASSIGNMENT == */
-  padding: 16px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  padding: 16px; /* <= ASSIGNMENT =| */
+
+  /* ::positioning:: */
+  align-items: center; /* <= ASSIGNMENT =| */
+  display: flex; /* <= ASSIGNMENT =| */
+  justify-content: space-between; /* <= ASSIGNMENT =| */
 }
 
 .logo {
+  /* ::typography:: */
   font-size: 48px;
   font-weight: 900;
+
+  /* ::box-model:: */
   color: tomato;
   background: white;
   padding: 4px 32px;
 }
 
 ul {
-  /* this removes the dots on the list items*/
-  list-style-type: none;
-  /* == ASSIGNMENT == */
-  display: flex;
-  gap: 16px;
-  padding: 0;
+  /* ::typography:: */
+  list-style-type: none; /* < this removes the dots on the list items */
+
+  /* ::box-model:: */
+  padding: 0; /* <= ASSIGNMENT =| */
+
+  /* ::positioning:: */
+  display: flex; /* <= ASSIGNMENT =| */
+  gap: 16px; /* <= ASSIGNMENT =| */
 }
 
 a {
+  /* ::typography:: */
   font-size: 22px;
+  text-decoration: none; /* < this removes the line under the links */
+
+  /* ::box-model:: */
   background: white;
   padding: 8px;
-  /* this removes the line under the links */
-  text-decoration: none;
 }
 
 /*
